2013-08-19  Meador Inge  <meadori@codesourcery.com>

	* libc/stdlib/__atexit.c (__register_exitproc): NULL-ify
	_on_exit_args_ptr when creating a new _atexit structure while
	_REENT_SMALL is defined.

2013-08-12  Bin Cheng  <bin.cheng@arm.com>

	* libc/configure.in (--enable-newlib-wchar-orient): Remove.
	* libc/configure: Regenerated.
	* libc/stdio/Makefile.am (NEWLIB_WIDE_ORIENT): Remove.
	* libc/stdio/Makefile.in: Regenerated.

2013-08-12  Yufeng Zhang  <Yufeng.Zhang@arm.com>

	* libc/sys/arm/crt0.S: Remove 'start'.

2013-08-08  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/string/strncat.c: Fix typo in documentation.

2013-08-01  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdio_ext.h (__fbufsize): Define as inline function for
	gcc, as macro otherwise.
	(__freading): Ditto.
	(__fwriting): Ditto.
	(__freadable): Ditto.
	(__fwriteable): Ditto.
	(__flbf): Ditto.
	(__fpending): Ditto.

2013-07-23  Sahil Patnayakuni  <sahilp@rtems.org>

	* libc/sys/linux/include/netdb.h, libc/sys/linux/net/getaddrinfo.c,
	libc/sys/linux/net/getnameinfo.c: Add restrict keyword to getnameinfo()
	and getaddrinfo() to increase standards compliance and match glibc.

2013-07-23  Sahil Patnayakuni  <sahilp@rtems.org>

	* libc/include/string.h, libc/string/memccpy.c, libc/string/memcpy.c,
	libc/string/stpcpy.c, libc/string/stpncpy.c, libc/string/strcat.c,
	libc/string/strncat.c, libc/string/strncpy.c, libc/string/strtok.c,
	libc/string/strtok_r.c, libc/string/strxfrm.c
	libc/machine/microblaze/strcpy.c, libc/machine/xscale/memcpy.c,
	libc/machine/cris/memcpy.c: Add __restrict to prototype to
	increase standards compliance.

2013-07-18  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* libc/sys/arm/syscalls.c (do_AngelSWI): Delete.
	* libc/sys/arm/libcfuncs.c (do_AngelSWI): Delete.
	* libc/sys/arm/swi.h: Copy over from libgloss.

2013-07-17  Janis Johnson  <janisjo@codesourcery.com>

	* libc/machine/powerpc/configure.in: Remove extra_sources; fix