@@ -42,6 +42,11 @@ struct hsearch_data
   size_t htablesize;
 };
 
+#ifndef __compar_fn_t_defined
+#define __compar_fn_t_defined
+typedef int (*__compar_fn_t) (const void *, const void *);
+#endif
+
 __BEGIN_DECLS
 int	 hcreate(size_t);
 void	 hdestroy(void);
@@ -49,10 +54,10 @@ ENTRY	*hsearch(ENTRY, ACTION);
 int	 hcreate_r(size_t, struct hsearch_data *);
 void	 hdestroy_r(struct hsearch_data *);
 int	hsearch_r(ENTRY, ACTION, ENTRY **, struct hsearch_data *);
-void	*tdelete(const void *, void **, int (*)(const void *, const void *));
+void	*tdelete(const void *, void **, __compar_fn_t);
 void	tdestroy (void *, void (*)(void *));
-void	*tfind(const void *, void **, int (*)(const void *, const void *));
-void	*tsearch(const void *, void **, int (*)(const void *, const void *));
+void	*tfind(const void *, void **, __compar_fn_t);
+void	*tsearch(const void *, void **, __compar_fn_t);
 void      twalk(const void *, void (*)(const void *, VISIT, int));
 __END_DECLS
 
