@@ -1,3 +1,10 @@
+2013-09-08  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
+
+	* libc/include/search.h (__compar_fn_t): Add typedef.
+	(tdelete, tfind, tsearch): Use it.
+	* libc/include/stdlib.h (__compar_fn_t): Add typedef.
+	(bsearch, qsort): Use it.
+
 2013-08-19  Meador Inge  <meadori@codesourcery.com>
 
 	* libc/stdlib/__atexit.c (__register_exitproc): NULL-ify
